# proxima

./: .gitignore  README.md  gaming_marketplace.html  gaming_marketplace_catalog.html  gaming_marketplace_messages.html  gaming_marketplace_profile.html  gaming_marketplace_spa.html  next.config.mjs  openapi-clean.json  openapi-pretty.json  openapi.json  package.json
backend/: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 20260713_01_create_auth_tables.py  20260713_02_marketplace.py  20260713_03_database_avatars.py  20260713_04_add_user_bio.py  20260713_05_vercel_blob_avatars.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  chats.py  health.py  listings.py  orders.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  avatar.py  base.py  conversation.py  listing.py  message.py  order.py  refresh_session.py  user.py
backend/app/schemas/: auth.py  chat.py  listing.py  order.py  user.py
backend/app/services/: avatars.py  orders.py
backend/scripts/: smoke_test.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_marketplace.py
frontend/: .env.example  eslint.config.mjs  next.config.mjs  package-lock.json  package.json
frontend/src/app/: AppContext.js  layout.js
legacy_static/: gaming_marketplace_all_lots.html  gaming_marketplace_profile.html  gaming_marketplace_spa.html
src/app/: globals.css  page.js
(+12 files in other folders)
