[project]
name = "proxima"
version = "0.1.0"
description = "FastAPI marketplace backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
    "SQLAlchemy==2.0.51",
    "asyncpg==0.31.0",
    "aiosqlite==0.22.1",
    "alembic==1.18.5",
    "pydantic-settings==2.14.2",
    "email-validator==2.3.0",
    "pwdlib[argon2]==0.3.0",
    "PyJWT==2.13.0",
    "Pillow==12.3.0",
    "python-multipart==0.0.32",
    "vercel==0.6.0",
    "python-dotenv==1.2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".vercel", ".codex-run"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.vercel]
entrypoint = "app.main:app"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
